新增mui自定义封装；详情请看博客：《移动端App uni-app + mui 开发记录》 https://www.cnblogs.com/huanzi-qch/p/11972723.html

--- a/springboot-uniapp-mui/src/main/resources/view/common/head.html
+++ b/springboot-uniapp-mui/src/main/resources/view/common/head.html
@@ -9,6 +9,11 @@
         </script>
     </head>
 
+    <!-- jquery -->
+    <head>
+        <script th:src="@{/common/jquery/jquery.js}"></script>
+    </head>
+
     <!-- 引入mui框架 -->
     <head>
         <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
