--- a/springboot-uniapp-mui/src/main/resources/view/mobile/muiwrapper/dialog.html
+++ b/springboot-uniapp-mui/src/main/resources/view/mobile/muiwrapper/dialog.html
@@ -32,7 +32,7 @@
     <button class="mui-btn">无用按钮</button>
     <button class="mui-btn">无用按钮</button>
     <button class="mui-btn">无用按钮</button>
-    <button class="mui-btn">无用按钮</button>
+    <button class="mui-btn">最后一个</button>
 
     <!-- 例如弹窗等内容，需要放在外面 -->
     <div>
