--- a/springboot-uniapp-mui/src/main/resources/view/mobile/muiwrapper/muiDialog.html
+++ b/springboot-uniapp-mui/src/main/resources/view/mobile/muiwrapper/muiDialog.html
@@ -29,6 +29,6 @@
     <button class="mui-btn">无用按钮</button>
     <button class="mui-btn">无用按钮</button>
     <button class="mui-btn">无用按钮</button>
-    <button class="mui-btn">无用按钮</button>
+    <button class="mui-btn">最后一个</button>
 </body>
 </html>
