--- a/springboot-uniapp-mui/src/main/resources/view/mobile/muiwrapper/test3.html
+++ b/springboot-uniapp-mui/src/main/resources/view/mobile/muiwrapper/test3.html
@@ -20,9 +20,9 @@
 <button class="mui-btn" onclick="HuanziFooter.hide();">隐藏底部按钮</button>
 <button class="mui-btn"  onclick="HuanziFooter.show();">显示底部按钮</button>
 <button class="mui-btn"  onclick="HuanziHeader.init();">清空所有头部按钮</button>
-<button class="mui-btn"  onclick="HuanziHeader.hideBack();">隐藏头部返回按钮</button>
 <button class="mui-btn"  onclick="HuanziHeader.showBack();">显示头部返回按钮</button>
-<button class="mui-btn"  onclick="HuanziHeader.appendButton('<a class=\'mui-icon mui-icon-bars mui-pull-right\' onclick=\'mainIframe.window.butFun()\'></a>');">追加头部按钮</button>
+<button class="mui-btn"  onclick="HuanziHeader.hideBack();">隐藏头部返回按钮</button>
+<button class="mui-btn"  onclick="HuanziHeader.appendButton('<a class=\'mui-icon mui-icon-bars mui-pull-right\' onclick=\'butFun()\'></a>');">追加头部按钮</button>
 <button class="mui-btn"  onclick="HuanziHeader.removeButton('.mui-icon-bars');">移除头部按钮</button>
 
 <button class="mui-btn">无用按钮</button>
@@ -37,7 +37,7 @@
 <button class="mui-btn">无用按钮</button>
 <button class="mui-btn">无用按钮</button>
 <button class="mui-btn">无用按钮</button>
-<button class="mui-btn">无用按钮</button>
+<button class="mui-btn">最后一个</button>
 </body>
 <script>
     function butFun() {
