1、新增隐藏、显示头部；

--- a/springboot-uniapp-mui/src/main/resources/view/mobile/muiwrapper/test3.html
+++ b/springboot-uniapp-mui/src/main/resources/view/mobile/muiwrapper/test3.html
@@ -17,11 +17,13 @@
     </style>
 </head>
 <body>
+<button class="mui-btn" onclick="HuanziHeader.hide();">隐藏头部</button>
+<button class="mui-btn"  onclick="HuanziHeader.show();">显示头部</button>
 <button class="mui-btn" onclick="HuanziFooter.hide();">隐藏底部按钮</button>
 <button class="mui-btn"  onclick="HuanziFooter.show();">显示底部按钮</button>
 <button class="mui-btn"  onclick="HuanziHeader.init();">清空所有头部按钮</button>
-<button class="mui-btn"  onclick="HuanziHeader.showBack();">显示头部返回按钮</button>
-<button class="mui-btn"  onclick="HuanziHeader.hideBack();">隐藏头部返回按钮</button>
+<button class="mui-btn"  onclick="HuanziHeader.showBackButton();">显示头部返回按钮</button>
+<button class="mui-btn"  onclick="HuanziHeader.hideBackButton();">隐藏头部返回按钮</button>
 <button class="mui-btn"  onclick="HuanziHeader.appendButton('<a class=\'mui-icon mui-icon-bars mui-pull-right\' onclick=\'butFun()\'></a>');">追加头部按钮</button>
 <button class="mui-btn"  onclick="HuanziHeader.removeButton('.mui-icon-bars');">移除头部按钮</button>
 
