1、新增底部按钮动态配置，真正项目应用中，可以从数据库动态读取 2、自定义弹窗，告警、确认弹窗内部调用父类显示，回调依旧执行子iframe的方法，效果就是遮阴层能后覆盖标题栏、底部按钮 3、优化代码main.html代码，尽量使用thymeleaf语法；开启初始化所有页面功能，页面提前加载、提高后续切换页面体验；

--- a/springboot-uniapp-mui/src/main/resources/view/common/head.html
+++ b/springboot-uniapp-mui/src/main/resources/view/common/head.html
@@ -5,8 +5,12 @@
     <!-- 顶部进度条开始 -->
     <head>
         <script>
+            //是否为main页面
+            function isMain() {
+                return window.location.pathname === "/muiwrapper/main";
+            }
             //顶部进度条开始
-            if(window.location.pathname !== "/muiwrapper/main"){
+            if(!isMain()){
                 window.parent.NProgress.start();
             }
         </script>
