--- a/springboot-uniapp-mui/src/main/resources/view/mobile/muiwrapper/test4.html
+++ b/springboot-uniapp-mui/src/main/resources/view/mobile/muiwrapper/test4.html
@@ -19,6 +19,7 @@
 <body>
 <button class="mui-btn" onclick="window.location.href = 'https://www.baidu.com';">跳转百度</button>
 <button class="mui-btn" onclick="barcode()">扫描二维码</button>
+<button class="mui-btn" onclick="openWindow()">打开新页面</button>
 <h1>页面4</h1>
 <h1>页面4</h1>
 <h1>页面4</h1>
